--- a/index.html
+++ b/index.html
@@ -153,6 +153,52 @@ Feel free to improve the project.</p>
 <div class="highlight highlight-text-html-php"><pre><span class="pl-s1"><span class="pl-c1">Product</span><span class="pl-k">::</span>destroy(<span class="pl-c1">1</span>);</span></pre></div>
 
 <h3>
+<a id="model-events" class="anchor" href="#model-events" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Model events</h3>
+
+<p>Out of the box you are provided with a simple implementation of events.<br>
+You can override the following methods to define events:</p>
+
+<ul>
+<li>
+<code>saving()</code> is called before saving, updating, creating the model</li>
+<li>
+<code>saved()</code> is called after saving, updating, creating the model</li>
+<li>
+<code>deleting()</code> is called before deleting the model</li>
+<li>
+<code>deleted()</code> is called after deleting the model</li>
+</ul>
+
+<p>For example:</p>
+
+<div class="highlight highlight-text-html-php"><pre><span class="pl-s1"><span class="pl-k">class</span> <span class="pl-en">Product</span> <span class="pl-k">extends</span> <span class="pl-e">ElasticsearchModel</span></span>
+<span class="pl-s1">{</span>
+<span class="pl-s1">    <span class="pl-k">public</span> <span class="pl-k">static</span> <span class="pl-smi">$index</span> <span class="pl-k">=</span> <span class="pl-s"><span class="pl-pds">'</span>test<span class="pl-pds">'</span></span>;</span>
+<span class="pl-s1">    <span class="pl-k">public</span> <span class="pl-k">static</span> <span class="pl-smi">$type</span> <span class="pl-k">=</span> <span class="pl-s"><span class="pl-pds">'</span>test<span class="pl-pds">'</span></span>;</span>
+<span class="pl-s1"></span>
+<span class="pl-s1">    <span class="pl-k">public</span> <span class="pl-smi">$name</span>;</span>
+<span class="pl-s1">    <span class="pl-k">public</span> <span class="pl-smi">$price</span> <span class="pl-k">=</span> <span class="pl-c1">0</span>;</span>
+<span class="pl-s1"></span>
+<span class="pl-s1">    <span class="pl-k">protected</span> <span class="pl-k">function</span> <span class="pl-en">saving</span>()</span>
+<span class="pl-s1">    {</span>
+<span class="pl-s1">        <span class="pl-k">if</span> (<span class="pl-smi">$this</span><span class="pl-k">-&gt;</span><span class="pl-smi">price</span> <span class="pl-k">&lt;=</span> <span class="pl-c1">0</span>) {</span>
+<span class="pl-s1">            <span class="pl-k">return</span> <span class="pl-c1">false</span>;</span>
+<span class="pl-s1">        }</span>
+<span class="pl-s1"></span>
+<span class="pl-s1">        <span class="pl-k">return</span> <span class="pl-c1">true</span>;</span>
+<span class="pl-s1">    }</span>
+<span class="pl-s1"></span>
+<span class="pl-s1">    <span class="pl-k">protected</span> <span class="pl-k">function</span> <span class="pl-en">deleting</span>()</span>
+<span class="pl-s1">    {</span>
+<span class="pl-s1">        <span class="pl-k">if</span> (<span class="pl-k">!</span><span class="pl-smi">$this</span><span class="pl-k">-&gt;</span>canDelete()) {</span>
+<span class="pl-s1">            <span class="pl-k">throw</span> <span class="pl-k">new</span> <span class="pl-c1">LogicException</span>(<span class="pl-s"><span class="pl-pds">'</span>No permissions to delete the model<span class="pl-pds">'</span></span>);</span>
+<span class="pl-s1">        }</span>
+<span class="pl-s1"></span>
+<span class="pl-s1">        <span class="pl-k">return</span> <span class="pl-c1">true</span>;</span>
+<span class="pl-s1">    }</span>
+<span class="pl-s1">}</span></pre></div>
+
+<h3>
 <a id="basic-search" class="anchor" href="#basic-search" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Basic search</h3>
 
 <p>There are helpers to search documents:</p>
@@ -308,14 +354,24 @@ Feel free to improve the project.</p>
 <span class="pl-s1"><span class="pl-smi">$line</span> <span class="pl-k">=</span> <span class="pl-smi">$po</span><span class="pl-k">-&gt;</span>lines()<span class="pl-k">-&gt;</span>find(<span class="pl-c1">1</span>); <span class="pl-c">// by id</span></span>
 <span class="pl-s1"><span class="pl-smi">$lines</span> <span class="pl-k">=</span> <span class="pl-smi">$po</span><span class="pl-k">-&gt;</span>lines()<span class="pl-k">-&gt;</span>get(); <span class="pl-c">// all children</span></span></pre></div>
 
+<h3>
+<a id="inner-hits" class="anchor" href="#inner-hits" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Inner hits</h3>
+
+<p>The parent/child and nested features allow the return of documents that have matches in a different scope. In the parent/child case, parent document are returned based on matches in child documents or child document are returned based on matches in parent documents. In the nested case, documents are returned based on matches in nested inner objects.</p>
+
+<p>You can get parent model using only one request with <code>InnerHitsFilter</code> filter:</p>
+
+<div class="highlight highlight-text-html-php"><pre><span class="pl-s1"><span class="pl-smi">$query</span> <span class="pl-k">=</span> <span class="pl-k">new</span> <span class="pl-c1">QueryBuilder</span>();</span>
+<span class="pl-s1"><span class="pl-smi">$query</span><span class="pl-k">-&gt;</span>filter(<span class="pl-k">new</span> <span class="pl-c1">InnerHitsFilter</span>(<span class="pl-c1">PurchaseOrderLine</span><span class="pl-k">::</span>getParentType()));</span>
+<span class="pl-s1"><span class="pl-smi">$line</span> <span class="pl-k">=</span> <span class="pl-c1">PurchaseOrderLine</span><span class="pl-k">::</span>search(<span class="pl-smi">$query</span>)<span class="pl-k">-&gt;</span>first();</span>
+<span class="pl-s1"><span class="pl-smi">$po</span> <span class="pl-k">=</span> <span class="pl-smi">$line</span><span class="pl-k">-&gt;</span>po()<span class="pl-k">-&gt;</span>get(); <span class="pl-c">// will be retrieved from inner_hits cache</span></span></pre></div>
+
 <p><strong>TO BE CONTINUED...</strong></p>
 
 <p><a href="https://github.com/TODO" class="user-mention">@TODO</a>:</p>
 
 <ul>
 <li>Add documentation about filters</li>
-<li>Add documentation about events</li>
-<li>Add documentation about inner_hits feature</li>
 </ul>
 
 <h2>
