Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -43,13 +43,40 @@ Feel free to improve the project.</p>
 <a id="usage" class="anchor" href="#usage" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Usage</h2>
 
 <h3>
+<a id="configure-dependencies" class="anchor" href="#configure-dependencies" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Configure dependencies</h3>
+
+<blockquote>
+<p><strong>Warning!</strong> First of all you should create a base model and inherit from it their models.</p>
+</blockquote>
+
+<div class="highlight highlight-text-html-php"><pre><span class="pl-s1"><span class="pl-k">use</span> <span class="pl-c1">Elasticsearch\Client</span>;</span>
+<span class="pl-s1"><span class="pl-k">use</span> <span class="pl-c1">Isswp101\Persimmon\DAL\DALMediator</span>;</span>
+<span class="pl-s1"><span class="pl-k">use</span> <span class="pl-c1">Isswp101\Persimmon\DAL\ElasticsearchDAL</span>;</span>
+<span class="pl-s1"><span class="pl-k">use</span> <span class="pl-c1">Isswp101\Persimmon\ElasticsearchModel</span> <span class="pl-k">as</span> <span class="pl-c1">Model</span>;</span>
+<span class="pl-s1"></span>
+<span class="pl-s1"><span class="pl-k">class</span> <span class="pl-en">ElasticsearchModel</span> <span class="pl-k">extends</span> <span class="pl-e">Model</span></span>
+<span class="pl-s1">{</span>
+<span class="pl-s1">    <span class="pl-k">public</span> <span class="pl-k">function</span> <span class="pl-c1">__construct</span>(<span class="pl-k">array</span> <span class="pl-smi">$attributes</span> <span class="pl-k">=</span> [])</span>
+<span class="pl-s1">    {</span>
+<span class="pl-s1">        <span class="pl-smi">$dal</span> <span class="pl-k">=</span> <span class="pl-k">new</span> <span class="pl-c1">ElasticsearchDAL</span>(<span class="pl-smi">$this</span>, app(<span class="pl-c1">Client</span><span class="pl-k">::</span><span class="pl-c1">class</span>), <span class="pl-k">new</span> <span class="pl-c1">DALMediator</span>());</span>
+<span class="pl-s1"></span>
+<span class="pl-s1">        <span class="pl-k">parent</span><span class="pl-k">::</span>__construct(<span class="pl-smi">$dal</span>, <span class="pl-smi">$attributes</span>);</span>
+<span class="pl-s1">    }</span>
+<span class="pl-s1"></span>
+<span class="pl-s1">    <span class="pl-k">public</span> <span class="pl-k">static</span> <span class="pl-k">function</span> <span class="pl-en">createInstance</span>()</span>
+<span class="pl-s1">    {</span>
+<span class="pl-s1">        <span class="pl-k">return</span> <span class="pl-k">new</span> <span class="pl-k">static</span>();</span>
+<span class="pl-s1">    }</span>
+<span class="pl-s1">}</span></pre></div>
+
+<p>In this example we use Laravel IoC Container to resolve <code>Elasticsearch\Client</code> dependency as <code>app(Client::class)</code>.</p>
+
+<h3>
 <a id="create-a-new-model" class="anchor" href="#create-a-new-model" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Create a new model</h3>
 
 <p>You must override static variables <code>index</code> and <code>type</code> to determine the document path.</p>
 
-<div class="highlight highlight-text-html-php"><pre><span class="pl-s1"><span class="pl-k">use</span> <span class="pl-c1">Isswp101\Persimmon\ElasticsearchModel</span>;</span>
-<span class="pl-s1"></span>
-<span class="pl-s1"><span class="pl-k">class</span> <span class="pl-en">Product</span> <span class="pl-k">extends</span> <span class="pl-e">ElasticsearchModel</span></span>
+<div class="highlight highlight-text-html-php"><pre><span class="pl-s1"><span class="pl-k">class</span> <span class="pl-en">Product</span> <span class="pl-k">extends</span> <span class="pl-e">ElasticsearchModel</span></span>
 <span class="pl-s1">{</span>
 <span class="pl-s1">    <span class="pl-k">protected</span> <span class="pl-k">static</span> <span class="pl-smi">$index</span> <span class="pl-k">=</span> <span class="pl-s"><span class="pl-pds">'</span>test<span class="pl-pds">'</span></span>;</span>
 <span class="pl-s1">    <span class="pl-k">protected</span> <span class="pl-k">static</span> <span class="pl-smi">$type</span> <span class="pl-k">=</span> <span class="pl-s"><span class="pl-pds">'</span>test<span class="pl-pds">'</span></span>;</span>
@@ -365,6 +392,46 @@ You can override the following methods to define events:</p>
 <span class="pl-s1"><span class="pl-smi">$query</span><span class="pl-k">-&gt;</span>filter(<span class="pl-k">new</span> <span class="pl-c1">InnerHitsFilter</span>(<span class="pl-c1">PurchaseOrderLine</span><span class="pl-k">::</span>getParentType()));</span>
 <span class="pl-s1"><span class="pl-smi">$line</span> <span class="pl-k">=</span> <span class="pl-c1">PurchaseOrderLine</span><span class="pl-k">::</span>search(<span class="pl-smi">$query</span>)<span class="pl-k">-&gt;</span>first();</span>
 <span class="pl-s1"><span class="pl-smi">$po</span> <span class="pl-k">=</span> <span class="pl-smi">$line</span><span class="pl-k">-&gt;</span>po()<span class="pl-k">-&gt;</span>get(); <span class="pl-c">// will be retrieved from inner_hits cache</span></span></pre></div>
+
+<h3>
+<a id="debugging-and-data-access-layer-events" class="anchor" href="#debugging-and-data-access-layer-events" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Debugging and data access layer events</h3>
+
+<p>To debug all elasticsearch queries to search you can use own <code>DALEmitter</code> class:</p>
+
+<div class="highlight highlight-text-html-php"><pre><span class="pl-s1"><span class="pl-k">use</span> <span class="pl-c1">Isswp101\Persimmon\DAL\DALMediator</span>;</span>
+<span class="pl-s1"><span class="pl-k">use</span> <span class="pl-c1">Log</span>;</span>
+<span class="pl-s1"></span>
+<span class="pl-s1"><span class="pl-k">class</span> <span class="pl-en">DALEmitter</span> <span class="pl-k">extends</span> <span class="pl-e">DALMediator</span></span>
+<span class="pl-s1">{</span>
+<span class="pl-s1">    <span class="pl-k">public</span> <span class="pl-k">function</span> <span class="pl-c1">__construct</span>()</span>
+<span class="pl-s1">    {</span>
+<span class="pl-s1">        <span class="pl-smi">$this</span><span class="pl-k">-&gt;</span>attach(<span class="pl-c1">DALMediator</span><span class="pl-k">::</span><span class="pl-c1">EVENT_BEFORE_SEARCH</span>, <span class="pl-k">function</span> (<span class="pl-k">array</span> <span class="pl-smi">$params</span>) {</span>
+<span class="pl-s1">            <span class="pl-c1">Log</span><span class="pl-k">::</span>debug(<span class="pl-s"><span class="pl-pds">'</span>Elasticsearch query<span class="pl-pds">'</span></span>, <span class="pl-smi">$params</span>);</span>
+<span class="pl-s1">        });</span>
+<span class="pl-s1">    }</span>
+<span class="pl-s1">}</span></pre></div>
+
+<p>And configure it in your service provider:</p>
+
+<div class="highlight highlight-text-html-php"><pre><span class="pl-s1"><span class="pl-k">class</span> <span class="pl-en">ElasticsearchModel</span> <span class="pl-k">extends</span> <span class="pl-e">Model</span></span>
+<span class="pl-s1">{</span>
+<span class="pl-s1">    <span class="pl-k">public</span> <span class="pl-k">function</span> <span class="pl-c1">__construct</span>(<span class="pl-k">array</span> <span class="pl-smi">$attributes</span> <span class="pl-k">=</span> [])</span>
+<span class="pl-s1">    {</span>
+<span class="pl-s1">        <span class="pl-smi">$dal</span> <span class="pl-k">=</span> <span class="pl-k">new</span> <span class="pl-c1">ElasticsearchDAL</span>(<span class="pl-smi">$this</span>, app(<span class="pl-c1">Client</span><span class="pl-k">::</span><span class="pl-c1">class</span>), <span class="pl-k">new</span> <span class="pl-c1">DALEmitter</span>());</span>
+<span class="pl-s1"></span>
+<span class="pl-s1">        <span class="pl-k">parent</span><span class="pl-k">::</span>__construct(<span class="pl-smi">$dal</span>, <span class="pl-smi">$attributes</span>);</span>
+<span class="pl-s1">    }</span>
+<span class="pl-s1">    <span class="pl-c">// ...</span></span>
+<span class="pl-s1">}</span></pre></div>
+
+<p>There are the following events:</p>
+
+<ul>
+<li>
+<code>DALMediator::EVENT_BEFORE_SEARCH</code> is triggered before any search.</li>
+<li>
+<code>DALMediator::EVENT_AFTER_SEARCH</code> is triggered after any search.</li>
+</ul>
 
 <p><strong>TO BE CONTINUED...</strong></p>
 
